fix(BaseController): improve project and task name validation, streamline error messages